# alpi-transcript

./: README.md  pyproject.toml
app/: app.py  speech_text.py  test.py
notebooks/: diagram.ipynb  speech_text.ipynb
processing/: speech_text_google.py  speech_text_whisper.py
